display modal correctly on smaller screen

--- a/budget-app/src/components/Modal.css
+++ b/budget-app/src/components/Modal.css
@@ -34,8 +34,8 @@
 
 .close-modal-btn {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0.1rem;
+  right: 0.1rem;
   font-size: 2rem;
   background: transparent;
   border-color: transparent;
@@ -46,7 +46,7 @@
 .form-control {
   display: flex;
   flex-direction: column;
-  margin: 3.5rem 2rem;
+  margin: 2.5rem 2rem;
 }
 
 .input-style {
